# product-service

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.prod  Makefile  README.md  compose.prod.template.yaml  compose.prod.yaml  compose.template.yaml  compose.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: submodule.yaml
.sonarlint/: connectedMode.json
migrations/: env.py
migrations/versions/: 82430fd6dda8_populate_data.py  84d76262b521_initial_commit.py  d2af1c2675bc_initial_migration.py
scripts/: README.md  categories_dicts.py  categorize_nulls.py  gen_blurhash.py  generate_dicts.py  script.py  script2.py  translate.py
src/: crud.py  graphql.py  main.py  models.py  utils.py
src/api/: graphql.py  routes.py  service.py
src/config/: session.py  settings.py
src/crud/: base.py  brand.py  category.py  model.py  product.py
src/db/: session.py
src/grpc_service/: helper_client.py  service.py
src/grpc_service/protos/: service.proto
src/microservice_template/: main.py
src/models/: __init__.py  base.py  book.py  brand.py  category.py  model.py  product.py
templates/: Dockerfile.template  Dockerfile.template.prod  compose.prod.template.yaml  compose.template.yaml  connections.template.py  graphql.template.py  main.template.py  model.template.py  service.template.proto  service.template.py  submodule.template.yaml
